--- a/flexbox/styles/flaxbox 개요.css
+++ b/flexbox/styles/flaxbox 개요.css
@@ -5,7 +5,7 @@
   border: 5px dashed orange;
 
   display: flex;
-  /*display: flex;추가하여 박스들이 가로로
+  /*display: flex;추가하여 아이템들이 가로로
    유연하게 만들어짐*/
 }
 
