--- a/flexbox/styles/item(flex-grow).css
+++ b/flexbox/styles/item(flex-grow).css
@@ -1,7 +1,8 @@
 /* 1. flex-grow  
 특징: 사용자가 페이지를 가로나 세로로 늘렸을때
 item 옆에 빈공간이 보일것이다.
-item들로 빈공간을 채우는데 사용된다*/
+item들로 빈공간을 채우는데 사용된다. 
+페이지를 늘렸을때 늘어난 크기에서 비율대로 item들이 늘어난다*/
 
 
 .container {
@@ -36,3 +37,37 @@ item들로 빈공간을 채우는데 사용된다*/
 }
 
 /*flex-grow 선택되지 않는 태그들은 크기를 유지한다.*/
+
+
+
+
+/* 2. flex-shrink */
+/* 페이지를 줄였을때 줄어든 크기에서 비율대로 item들이 줄어든다 */
+
+
+.container22 {
+  height: 200px;
+  border: 5px dashed orange;
+
+  display: flex;
+
+}
+
+
+.item2 {
+  width: 300px;
+  height: 50px;
+  margin: 5px;
+  /*간격 띄우기*/
+  background-color: blue;
+  border: 5px solid green;
+  font-size: 30px;
+}
+
+.item2:nth-child(2) {
+  flex-shrink: 2;
+}
+
+.item2:nth-child(3) {
+  flex-shrink: 3;
+}
