--- a/flexbox/styles/container(align-items).css
+++ b/flexbox/styles/container(align-items).css
@@ -49,7 +49,7 @@ div {
 
   align-content: flex-end;
   /* align-content: flex-end; 설정함으로써
-  여러줄을 옮긴다. */
+  여러줄을 옮기고 정렬한다. */
 }
 
 .item2 {
@@ -60,4 +60,36 @@ div {
   background-color: blue;
   border: 5px solid green;
   font-size: 30px;
+}
+
+
+/* 3. align-self
+특징: 여러줄이 있을경우 가로 줄들을 구분하여 정렬 한다.
+한가지 요소에 추가 가능*/
+.container3 {
+
+  height: 400px;
+
+  border: 5px dashed orange;
+
+  display: flex;
+
+  flex-wrap: wrap;
+
+  align-items: center;
+}
+
+.item3 {
+  width: 150px;
+  height: 50px;
+  margin: 5px;
+  /*간격 띄우기*/
+  background-color: blue;
+  border: 3px solid green;
+  font-size: 30px;
+}
+
+.item3:nth-child(4) {
+  height: 100px;
+  align-self: stretch;
 }
