grid 단축속성 추가

--- a/Grid/styles/container(grid-auto-rows, grid-auto-columns, grid-auto-flow).css
+++ b/Grid/styles/container(grid-auto-rows, grid-auto-columns, grid-auto-flow).css
@@ -79,4 +79,6 @@
 /* 4. grid shorthand 단축속성*/
 
 /* grid: row  colomns 
- 자세한건 mdn 사이트 참고. */
+ 자세한건 mdn 사이트 참고. grid 단축속성은 복합하기때문에
+ grid를 다 이해하면 그때 사용하는걸 추천,
+ grid 단축속성을 해석하기 위해서도 참고하면 좋다. */
