--- a/Grid/styles/container(justify-content, align-content).css
+++ b/Grid/styles/container(justify-content, align-content).css
@@ -1,7 +1,7 @@
 /* justify content는 내부에 있는 content를 제외한
 나머지 빈 자리를 어떻게 할건지에 대한 결정을 한다. */
 
-/* 1.justify-content */
+/* 1.justify-content(x축) ,align-content(y축) --container 속성*/
 
 .container {
   width: 400px;
@@ -25,4 +25,36 @@
   background-color: cornflowerblue;
   border: 5px solid blue;
   font-size: 24px;
+}
+
+
+/* 2. justify-items , align-items 
+ 하나의 item들의 위치를 어떻게 할건지에 대해 결정한다. */
+
+.container2 {
+  width: 100%;
+  height: 500px;
+  border: 4px dashed orange;
+
+  display: grid;
+  grid-template-rows: repeat(3, 1fr);
+  grid-template-columns: repeat(3, 1fr);
+
+  justify-items: center;
+  /* x축이 center로 된다. 칸의 크기는 자기 텍스르
+  크기로 줄어든다. */
+  align-items: center;
+  /* y축이 center로 된다. 칸의 크기는 자기 텍스트
+  크리고 줄어든다. */
+}
+
+.item2 {
+  background-color: cornflowerblue;
+  border: 5px solid blue;
+  font-size: 24px;
+}
+
+.item2:nth-child(1) {
+  width: 50px;
+  height: 50px;
 }
