--- a/Grid/styles/item(order, z-index).css
+++ b/Grid/styles/item(order, z-index).css
@@ -30,3 +30,40 @@
 }
 
 /*order을 사용하여 칸의 순서 변경 가능. */
+
+
+/* 2. z-index*/
+.container2 {
+  width: 100%;
+  height: 100%;
+  border: 4px dashed orange;
+
+  display: grid;
+
+  grid-template-rows: repeat(3, 100px);
+  grid-template-columns: repeat(3, 1fr);
+
+
+}
+
+.item2 {
+  background-color: aqua;
+  border: 4px solid blue;
+  font-size: 24px;
+
+  opacity: 0.5;
+  /* 투명도.*/
+}
+
+.item2:nth-child(1) {
+  grid-row: 1 / span 2;
+  grid-column: 1 /span 2;
+}
+
+.item2:nth-child(2) {
+  grid-row: 1 /span 1;
+  grid-column: 2 /span 3;
+
+  z-index: -1;
+  /* nth-child(1) 보다 뒤로 가게된다. */
+}
